--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Nikhilbansal777.github.io/movielist",
+  "homepage": ".",
   "name": "moviex",
   "version": "0.1.0",
   "private": true,
